--- a/.github/workflows/weekly_Nepal.yml
+++ b/.github/workflows/weekly_Nepal.yml
@@ -31,9 +31,9 @@ jobs:
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         # run: |
         #   osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --extract_last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --wild_tags
-        run : |
-            osmsg --url "https://planet.openstreetmap.org/replication/day" --format image csv --timezone Nepal --tags building highway waterway amenity --name stats --wild_tags --extract_last_week --country Nepal --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --force
-      
+        run: |
+          osmsg --url "https://planet.openstreetmap.org/replication/day" --format image csv --tags building highway waterway amenity --name stats --wild_tags --extract_last_week --country Nepal --name stats --read_from_metadata stats/Nepal/Weekly/stats_metadata.json --force
+
       - name: add stats to git
 
         run: |
